# steam-backlog-organizer

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  build.py  gui.py  organizer.py  steam_library_organized.json
.github/: FUNDING.yml
app/: index.html  package.json
app/src/: App.tsx
app/src-tauri/: Cargo.toml  nsis-hooks.nsh  tauri.conf.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: cache.rs  classifier.rs  collections.rs  config.rs  hltb.rs  lib.rs  llm.rs  main.rs  steam_api.rs
app/src-tauri/tests/: parity.rs
app/src/components/: ChatPanel.tsx  GameDetail.tsx  GameGrid.tsx  SettingsPanel.tsx  SetupScreen.tsx  TitleBar.tsx
app/src/lib/: commands.ts
docs/: HLTB_SHORT_GAMES_PLAN.md
scripts/: generate_icon.py
