[package]
name = "gamekeeper"
version = "3.2.0"
edition = "2021"

[lib]
name = "gamekeeper_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "gamekeeper"
path = "src/main.rs"

[dependencies]
tauri = { version = "2", features = [] }
tauri-build = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio = { version = "1", features = ["full"] }
regex = "1"
dirs = "5"
rand = "0.9"
futures-util = "0.3"
zip = "2"
tauri-plugin-shell = "2"

[build-dependencies]
tauri-build = { version = "2", features = [] }
